--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+      content="Web site created using create-react-app" />
+      <!--
       manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+      user's mobile device or desktop. 
+      See https://developers.google.com/web/fundamentals/web-app-manifest/
+      -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -24,7 +23,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-SrFTVhsT7X8UQRA5lD4zQ3sV6ONgGV2C5/ZX5bTqjtjM8t2g0f7a9B31UO4TJjjzTYg43hNn4mBpA3LUmJU0ug==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Agdasima&family=Caprasimo&family=Raleway&display=swap" rel="stylesheet">
+    <title>Nivvis Labs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
